# rv-reservation-system

./: .gitignore  .vercelignore  A few more issues we need to investigate and make issues for.md  AGENTS.md  README.md  client.md  knip.jsonc  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.claude/: settings.json
.github/: copilot-instructions.md  release.yml
.github/instructions/: *.instructions.md  rust.instructions.md  svelte.instructions.md  typescript.instructions.md
.github/workflows/: ci.yml  release.yml
.opencode/plugins/: code-health.ts
correspondance/: 2026-03-08-ewcalvin-reservation-demo.md  2026-03-09-ewcalvin-follow-up.md  duane-hylton-rv-requirements.txt
docs/: PLAN.md  code_health_audit_2026-05.md  coding_standards.md  release.md
scripts/: code-health.mjs  convert-csv-to-backup.mjs  generate-icons.py  release-guard.mjs  screenshot.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: customer-state.ts  date.ts  reservations.ts  site-settings.ts  state.ts  storage.ts  types.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
tests/: node-shims.d.ts
tests/e2e/: admin.spec.ts  autocomplete.spec.ts  compact-view.spec.ts  customer-modal-sticky-header.spec.ts  customer-page-bug.spec.ts  customers.spec.ts  date-navigation.spec.ts  date-range-calendar.spec.ts  drag-drop.spec.ts  edit-modal-autocomplete.spec.ts  merge-customers.spec.ts  no-show-status.spec.ts  reservations.spec.ts  rv-type-search.spec.ts  site-colors.spec.ts  site-management.spec.ts  smoke.spec.ts  today-column.spec.ts  undo.spec.ts
tests/unit/: admin-use-cases.test.ts  auto-backup.test.ts  availability.test.ts  backup-import.test.ts  backup.test.ts  composition.test.ts  customer-csv-parser.test.ts  customer-duplicates.test.ts  customer-merge.test.ts  customer-search.test.ts  daily-summary.test.ts  (+23 more)
(+78 files in other folders)
