[package]
name = "rv-reservation-system"
version = "1.5.1"
description = "RV Reservation Schedule"
authors = ["Nostos Labs"]
edition = "2021"

[lib]
name = "rv_reservation_system_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
